# rust-cli-app

./: Cargo.toml
src/: main.rs
