[package]
name = "rust-cli-app"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
prettytable-rs = { version = "0.10", features = ["std"] }
dirs = "5.0"